# DataGenerator

./: Example scripts.py  README.md  pyproject.toml
datagenerator/: generateengineeringdata.py
